<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigurarActivity" >

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name_editTxt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexto_txt" />

        <RadioGroup
            android:id="@+id/sexo_radioGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/male_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male_radiobtn" />

            <RadioButton
                android:id="@+id/female_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female_radioBtn" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dieta_txt" />

    <CheckBox
        android:id="@+id/hipolip_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hipolipidia_checkBx" />

    <CheckBox
        android:id="@+id/hipoglici_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hipoglicidica_checkBx" />

    <CheckBox
        android:id="@+id/semglutenn_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semglutem_checkBx" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar_btn" />

        <Button
            android:id="@+id/cancelar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar_btn" />
    </LinearLayout>

</LinearLayout>